Add reflection hack to let H-UPPAAL launch under Java 17 (because of jfoenix)