@@ -17,8 +17,39 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
+// This list of "allowed" illegal reflection access definitions originates from jfoenix in this github issue:
+//    https://github.com/sshahine/JFoenix/issues/1200#issuecomment-828541961
+// It's been edited to remove duplicate lines and to add consistency. Most of these generate a warning at runtime
+//    that the mentioned module is unknown, but I'm keeping these until jfoenix starts fixing their awful codebase.
+def reflectionHack = [
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=com.jfoenix",
+    "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
+    "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+    "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-exports=java.base/java.lang.reflect=com.jfoenix",
+    "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+    "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+    "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+    "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
+    "--add-exports=javafx.controls/com.Sun.javafx.scene.control.behavior=ALL-UNNAMED",
+    "--add-exports=javafx.controls/com.Sun.javafx.scene.control.behavior=com.jfoenix",
+    "--add-exports=javafx.controls/com.sun.javafx.binding=ALL-UNNAMED",
+    "--add-exports=javafx.controls/com.sun.javafx.binding=com.jfoenix",
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+    "--add-exports=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
+    "--add-exports=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+    "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+    "--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix",
+    "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+    "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+]
+
 application {
-    applicationDefaultJvmArgs = ['--illegal-access=permit', '-XX:+UseZGC']
+    applicationDefaultJvmArgs = ['-XX:+UseZGC'] + reflectionHack
 }
 
 repositories {
